src/objects/GLBL_Form_Execution__c.object
<CustomObject>
    <description>A form execution Object storing the snapshot of form template</description>
    <fields>
        <fullName>Aggregate_Score_A__c</fullName>
        <description>The overall Force.com score for this form execution: Created by J Mohanan Pillai</description>
        <inlineHelpText>The overall Force.com score for this form execution</inlineHelpText>
        <label>Aggregate Force.com score</label>
        <summarizedField>GLBL_Form_Execution_Question_Answer__c.Total_Score_A__c</summarizedField>
        <summaryForeignKey>GLBL_Form_Execution_Question_Answer__c.Form_Execution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Aggregate_Score_B__c</fullName>
        <description>The overall SharePoint score for this form execution: Created by J Mohanan Pillai</description>
        <inlineHelpText>The overall SharePoint score for this form execution</inlineHelpText>
        <label>Aggregate SharePoint score</label>
        <summarizedField>GLBL_Form_Execution_Question_Answer__c.Total_Score_B__c</summarizedField>
        <summaryForeignKey>GLBL_Form_Execution_Question_Answer__c.Form_Execution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Aggregate_Score_C__c</fullName>
        <description>The overall LillyCloud score for this form execution: Created by J Mohanan Pillai</description>
        <inlineHelpText>The overall LillyCloud score for this form execution</inlineHelpText>
        <label>Aggregate LillyCloud score</label>
        <summarizedField>GLBL_Form_Execution_Question_Answer__c.Total_Score_C__c</summarizedField>
        <summaryForeignKey>GLBL_Form_Execution_Question_Answer__c.Form_Execution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Aggregate_Score_D__c</fullName>
        <description>The overall Web Hosting score for this form execution: Created by J Mohanan Pillai</description>
        <inlineHelpText>The overall Web Hosting score for this form execution</inlineHelpText>
        <label>Aggregate Web Hosting score</label>
        <summarizedField>GLBL_Form_Execution_Question_Answer__c.Total_Score_D__c</summarizedField>
        <summaryForeignKey>GLBL_Form_Execution_Question_Answer__c.Form_Execution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Aggregate_Score_E__c</fullName>
        <description>The overall Business Strategic / Custom score for this form execution: Created by J Mohanan Pillai</description>
        <inlineHelpText>The overall Business Strategic / Custom Capability score for this form execution</inlineHelpText>
        <label>Aggregate Bus. Strategic / Custom score</label>
        <summarizedField>GLBL_Form_Execution_Question_Answer__c.Total_Score_E__c</summarizedField>
        <summaryForeignKey>GLBL_Form_Execution_Question_Answer__c.Form_Execution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Execution_Status__c</fullName>
        <label>Execution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Form_Executor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person executing the form</description>
        <label>Form Executor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Form_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project this form execution is related to: Created by S Matharu on 2014-09-08</description>
        <inlineHelpText>The project this form execution is related to</inlineHelpText>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>Form Executions</relationshipLabel>
        <relationshipName>Form_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Form__c</fullName>
        <description>Stores reference to form template</description>
        <label>Source Form</label>
        <referenceTo>GLBL_Form_Template__c</referenceTo>
        <relationshipLabel>Form Executions</relationshipLabel>
        <relationshipName>Form_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Stores the type of form that are displayed to the front end user</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Launchpad Assessment</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Form Execution</label>
    <nameField>
        <displayFormat>FE-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>